@@ -1,9 +1,9 @@
-.PHONY: all test 01 02 03 04 08 clean reallyclean
+.PHONY: all test 01 02 03 04 08 09 clean reallyclean
 
 CFLAGS=-I../../../lib -I../../../lib/cpp -DDEBUG -Werror
 LIBS=../../../lib/libmosquitto.so.1 ../../../lib/cpp/libmosquittopp.so.1
 
-all : 01 02 03 04 08
+all : 01 02 03 04 08 09
 
 01-con-discon-success.test : 01-con-discon-success.cpp
 	$(CXX) $< -o $@ $(CFLAGS) $(LIBS)
@@ -71,6 +71,9 @@ all : 01 02 03 04 08
 08-ssl-bad-cacert.test : 08-ssl-bad-cacert.cpp
 	$(CXX) $< -o $@ $(CFLAGS) $(LIBS)
 
+09-util-topic-matching.test : 09-util-topic-matching.cpp
+	$(CXX) $< -o $@ $(CFLAGS) $(LIBS)
+
 01 : 01-con-discon-success.test 01-will-set.test 01-unpwd-set.test 01-will-unpwd-set.test 01-no-clean-session.test 01-keepalive-pingreq.test
 
 02 : 02-subscribe-qos0.test 02-subscribe-qos1.test 02-subscribe-qos2.test 02-unsubscribe.test
@@ -80,6 +83,8 @@ all : 01 02 03 04 08
 04 : 04-retain-qos0.test
 
 08 : 08-ssl-connect-no-auth.test 08-ssl-connect-cert-auth.test 08-ssl-bad-cacert.test
+
+09 : 09-util-topic-matching.test
 
 reallyclean : clean
 	-rm -f *.orig
